--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-# Ignore build generated files
-build/
-dist/
-dist.zip
-
-# Ignore waf lock file
-.lock-waf*
-
-# Ignore installed node modules
-node_modules/
+.DS_Store
