- tidy up config pages. - fix bug crashing with saying buffer overrun. - few extra sayings. - set default colour depending bw or colour. - reset Never Settle text when sayings disabled and config saved. - deregister app messages on deinit. - code tweaks

--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "pebble-app"
   ],
   "private": true,
-  "capabilities":
-    [
-      "configurable"
-    ],
   "dependencies": {
     "pebble-clay": "^1.0.1"
   },
@@ -23,12 +19,15 @@
       "basalt",
       "chalk"
     ],
+    "capabilities": [
+        "configurable"
+      ],
     "watchapp": {
       "watchface": true
     },
     "messageKeys": [
-      "ColourTheme",
-      "EnableSayings"
+      "THEME",
+      "IS_SAYINGS"
     ],
     "resources": {
       "media": [
