--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "OnePlusLife",
   "author": "Tor Harrington",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "keywords": [
     "pebble-app"
   ],
@@ -35,7 +35,7 @@
           "type": "font",
           "name": "LATO_BLACK_24",
           "file": "fonts/Lato-Black.ttf",
-          "characterRegex": "[0-9:A-Za-z ]"
+          "characterRegex": "[0-9:A-Za-z !#?]"
         },
         {
           "type": "font",
